--- a/_site.yml
+++ b/_site.yml
@@ -6,7 +6,7 @@ navbar:
     - text: "About"
       href: about.html
     - text: "Data"
-      href: plotly.html
+      href: flexdashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<gl2458@cumc.columbia.edu>
     - icon: fa-github fa-lg
